vlib/v/checker/tests/globals/assign_no_value.vv
__global (
	test = int_i
)
